# RTCLI.AOTCompiler

./: .gitignore  README.md  RTCLI.AOTCompiler.sln
RTCLI.AOTCompiler/: Dispatcher.cs  Program.cs  RTCLI.AOTCompiler.csproj
RTCLI.AOTCompiler.Core/: CodeTextStorage.cs  CodeTextWriter.cs  Options.cs  RTCLI.AOTCompiler.Core.csproj  TranslateContext.cs
RTCLI.AOTCompiler.Core/Common/: Utilities.cs
RTCLI.AOTCompiler.Core/ILConverter/: ILConverter.cs
RTCLI.AOTCompiler.Core/ILConverter/CXX/: CallConvertersCXX.cs  CompareConvertersCXX.cs  FlowControlConvertersCXX.cs  ILConverterCXX.cs  ILConvertersCXX.cs  LdargConvertersCXX.cs  LdcConverters.cs  LdelemConvertersCXX.cs  LdindConvertersCXX.cs  LdlocConvertersCXX.cs  StargConvertersCXX.cs  StelemConvertersCXX.cs  StindConvertersCXX.cs  StlocConvertersCXX.cs
RTCLI.AOTCompiler.Core/Internal/: Utilities.cs
RTCLI.AOTCompiler.Core/Metadata/: AssemblyInformation.cs  AssemblyResolver.cs  FieldInformation.cs  InstructionInformation.cs  MemberInformation.cs  MetadataContext.cs  MetadataInformationBase.cs  MethodInformation.cs  ModuleInformation.cs  Operand.cs  ParameterInformation.cs  PropertyInformation.cs  TypeInformation.cs  VariableInformation.cs
RTCLI.AOTCompiler.Core/Translators/: CXXTranslator.cs  MetadataSerializer.cs  MethodTranslateContext.cs
RTCLI.AOTCompiler.Core/Translators/CXX/: CXXMethodTranslateContext.cs  CXXTranslator.cs  ILConvertersCXX.cs  InformationToCXX.cs
RTCLI.AOTCompiler/Properties/: launchSettings.json
RTCLI.AOTCompiler3/: Dispatcher.cs  Program.cs  RTCLI.AOTCompiler3.csproj
RTCLI.AOTCompiler3.Core/: CodeTextStorage.cs  CodeTextWriter.cs  Constants.cs  Options.cs  RTCLI.AOTCompiler3.Core.csproj  Utilities.cs
RTCLI.AOTCompiler3.Core/CXX/: FieldInformationCXX.cs  MethodInformationCXX.cs  MethodTranslateContextCXX.cs  ParamInformationCXX.cs  TypeInformationCXX.cs  VarInformationCXX.cs
RTCLI.AOTCompiler3.Core/ILConverter/: ILConverter.cs
RTCLI.AOTCompiler3.Core/ILConverter/CXX/: CallConvertersCXX.cs  CompareConvertersCXX.cs  FlowControlConvertersCXX.cs  ILConverterCXX.cs  ILConvertersCXX.cs  LdargConvertersCXX.cs  LdcConverters.cs  LdelemConvertersCXX.cs  LdindConvertersCXX.cs  LdlocConvertersCXX.cs  StargConvertersCXX.cs  StelemConvertersCXX.cs  StindConvertersCXX.cs  StlocConvertersCXX.cs
RTCLI.AOTCompiler3.Core/Meta/: AssemblyRepo.cs  RTCLIAssembly.cs
RTCLI.AOTCompiler3.Core/Theory/: CXXXX.cs  HXXXX.cs  SXXXX.cs
RTCLI.AOTCompiler3.Core/Translators/: CXXHeaderTranslator.cs  CXXSourceTranslator.cs  IRTCLITranslator.cs
RTCLI.AOTCompiler3.Core/Translators/CXX/: CXXHeaderRules.cs  CXXHeaderTranslator.cs  CXXPathHelper.cs  CXXScopeDisposer.cs  CXXSourceRules.cs  CXXSourceTranslator.cs
RTCLI.AOTCompiler3/Properties/: launchSettings.json
RTCLI.CXXTest/: .gitignore  CMakeLists.txt
RTCLI.Generated/meta/: RTCLI_TestCase.v1_0_0_0.json
RTCLI.Generated/src/RTCLI_TestCase/v1_0_0_0/: TestCaseClass.cpp
RTCLI.TestCase/: Program.cs  RTCLI.TestCase.csproj  TestArray.cs  TestCase - Backup.csproj  TestCase.cs  TestCase.csproj  TestCrossFile.cs  TestDelegate.cs  TestEnum.cs  TestGeneric.cs  TestInnerClass.cs  TestInterface.cs  TestReference.cs  TestString.cs  TestStruct.cs  TestSystem.cs  TestThrow.cs
RTCLI.TestCase.Reference/: AsssemblyReference.cs
TestProgram/: Program.cs  TestProgram.csproj
